# main_porject_chdan

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini
app/: main.py
app/api/v1/: auth.py  diary.py  question.py  quote.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: bookmark.py  diary.py  question.py  quote.py  token_blacklist.py  user.py  user_question.py
app/repositories/: bookmark_repo.py  diary_repo.py  question_repo.py  quote_repo.py  user_repo.py
app/schemas/: bookmark.py  diary.py  question.py  quote.py  user.py
app/scraping/: question_scraper.py  quote_scraper.py
app/services/: auth_service.py  bookmark_service.py  diary_service.py  question_service.py  quote_service.py
migrations/models/: 0_20250907232052_init.py  1_20250907232313_update.py  8_20250908042335_None.py
tests/: conftest.py  test_auth.py  test_diary.py  test_question.py  test_quote.py
